--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: 論文記録
 # email: mizuo.n@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  2日に1本論文をさらっと読む記録
+  論文をさらっと読む記録
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
