--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: 論文記録
 # email: mizuo.n@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   論文をさらっと読む記録
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/paper-memos" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  ozumin
